# animus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/include/: Animus.cmake  AnimusCPack.cmake  AnimusDjinni.cmake  AnimusJava.cmake  AnimusObjc.cmake  AnimusUtilities.cmake
cmake/modules/: FindDjinni.cmake  FindJson.cmake
cmake/toolchain/: ios.cmake
conf/: interface_definition.djinni  mobile++.djinni
rc/djinni/: http.djinni  interface_definition.djinni
scripts/: activity_indicator.sh
src/: CMakeLists.txt  api.cpp  event_loop.cpp  http.cpp  task_runner.hpp
src/cpp/: CMakeLists.txt  api.cpp  api.hpp  event_loop.cpp  event_loop.hpp  http.cpp  http.hpp
src/java/: AndroidEventLoop.java
src/java/io/github/animus/: AndroidHttp.java  AndroidThreadLauncher.java
src/objc/: AppleEventLoop.h  AppleEventLoop.m  AppleHttp.h  AppleHttp.m  AppleThreadLauncher.h  AppleThreadLauncher.m  CMakeLists.txt  EventLoopObjc.h  EventLoopObjc.m  HttpObjc.h  HttpObjc.m  ThreadLauncherObjc.h  ThreadLauncherObjc.m
test/: CMakeLists.txt  main.cpp
