source_group("Interface Files" FILES ${DJINNI_INTERFACE_FILES})
set_source_files_properties(${DJINNI_INTERFACE_FILES} PROPERTIES GENERATED TRUE)

add_library(${ANIMUS_BINARY_NAME} ${CPP_HEADERS} ${CPP_SOURCES} ${DJINNI_INTERFACE_FILES})
add_dependencies(${ANIMUS_BINARY_NAME} djinni)
target_include_directories(${ANIMUS_BINARY_NAME} PUBLIC ${ANIMUS_GEN_DIR} ${ANIMUS_INTERFACE_DIR} ${PROJECT_SOURCE_DIR}/${ANIMUS_DEPS_DIR}/json/include)
target_compile_definitions(${ANIMUS_BINARY_NAME} PRIVATE -DPROJECT_NAME=${ANIMUS_PROJECT_NAME} -DPROJECT_VERSION="${PROJECT_VERSION}")
